refactor: update tm component to use ngClass for dynamic styling

--- a/src/app/tm/tm.component.html
+++ b/src/app/tm/tm.component.html
@@ -1,4 +1,5 @@
 <div class="tm">
     <app-elem *ngFor="let item of dane" [pierwiastek]="item" 
-        (ngStyle)="{'grid-columns-start': item.y,'grid-rows-start': item.x }"></app-elem>
+        [ngClass]="item.category"
+        [ngStyle]="{'grid-column-start': item.xpos,'grid-row-start': item.ypos }"></app-elem>
 </div>
