feat: enhance elem component layout and styling; update tm grid structure

--- a/src/app/elem/elem.component.html
+++ b/src/app/elem/elem.component.html
@@ -1,1 +1,9 @@
-<p>{{pierwiastek.symbol}}</p>
+<div class="pierwiastek">
+    <div class="group">
+    <p>{{pierwiastek.number}}</p>
+    <p>{{pierwiastek.atomic_mass.toFixed(2)}}</p>
+    </div>
+    <p>{{pierwiastek.symbol}}</p>
+    <p>{{pierwiastek.name}}</p>
+</div>
+
