--- a/src/app/tm/tm.component.scss
+++ b/src/app/tm/tm.component.scss
@@ -1,6 +1,7 @@
 .tm {
     display: grid;
-    grid-template-columns: repeat(17, 1fr);
+    grid-template-columns: repeat(18, 1fr);
     grid-template-rows: repeat(10, 1fr);
-    
+    gap:5px;
+    padding: 5px;
 }
